<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="HIAAC" description="Name of the application [CHAR_LIMIT=25]">
    TransferLearningDemoApp
  </string>

    <string name="inference_mode_title" description="Title text displayed on the button when inference mode is on [CHAR_LIMIT=10]">
    Inference
  </string>
    <string name="capture_mode_title" description="Title text displayed on the button when capture mode is on [CHAR_LIMIT=10]">
    Training
  </string>

    <string name="train_action" description="Text displayed on the button that the user clicks to start model training [CHAR_LIMIT=6]">
    Train
  </string>
    <string name="pause_action" description="Text displayed on the button that the user clicks to pause model training [CHAR_LIMIT=6]">
    Pause
  </string>
    <string name="resume_action" description="Text displayed on the button that the user clicks to resume model training [CHAR_LIMIT=6]">
    Resume
  </string>

    <string name="switch_to_inference_hint" description="Hint message telling that the user can switch to the inference mode [CHAR_LIMIT=100]">
    You can switch to inference mode now. Pause training so that inference can start.
  </string>

    <string name="help_button_title" description="Help button text [CHAR_LIMIT=5]">
    Help?
  </string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_har">MainActivity_har</string>


    <string name="action_settings">Settings</string>


    <string name="csv_files">Created CSV Files</string>
    <string name="creating_csv_file">Creating CSV File . . .</string>
    <string name="starting_upload_file">Starting Upload . . .</string>
    <string name="share_with_firebase">Would you like to send data to Firebase Server?</string>
    <string name="share_with_firebase_title">Send to Firebase.</string>
    <string name="download_progress">Uploading . . .  %1$d%%</string>
    <string name="success">Success</string>

    <!-- Notifications -->
    <string name="experiment_finished_title">Finished Experiment!</string>
    <string name="experiment_finished_description">The Experiment %s has been finished!</string>
    <string name="experiment_timer_title">The experiment will start in . . .</string>


    <string name="label">Label</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit">Edit</string>
    <string name="label_title">Label title</string>
    <string name="delete_label">Delete label</string>
    <string name="stops_at">Stops at:</string>
    <string name="delete_config_confirmation">Do you want to delete this configuration?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="configuration_deleted">Configuration deleted</string>
    <string name="label_title_empty">Label tile is empty</string>


    <string-array name="embeeding_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


</resources>




