<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="org.tensorflow.lite.examples.transfer.CameraFragmentViewModel.TrainingState" />

        <variable
            name="vm"
            type="org.tensorflow.lite.examples.transfer.CameraFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.google.learning.brain.mobile.transfer.android.MainActivity">

        <TextureView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/help_background"
            android:text="@string/help_button_title"
            android:textAppearance="@style/ChipTextAppearance"
            android:textColor="@color/dark_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/mode_toggle_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/tf_out_line"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/capture_mode_button"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/capture_mode_title"
                android:textAppearance="@style/ChipTextAppearance"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/inference_mode_button"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/inference_mode_title"
                android:textAppearance="@style/ChipTextAppearance"
                android:textColor="@color/white" />

        </RadioGroup>

        <LinearLayout
            style="@style/Toast"
            android:visibility='@{vm.getSampleCollectionLongPressed}'
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help_button">

            <TextView
                style="@style/BigButtonTitle"
                android:text='@{String.format("%d samples collected", vm.numCollectedSamples)}'
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:background="@drawable/btn_big_gray"
            android:visibility='@{vm.captureMode &amp;&amp; vm.neededSamples > 0}'
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/BigButtonTitle"
                android:text="Collect samples"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/train_start_button"
            style="@style/BigButton"
            android:background="@drawable/btn_big_green"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.STARTED)}"
            android:visibility='@{vm.neededSamples == 0 &amp;&amp; vm.trainingState == TrainingState.NOT_STARTED}'
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/train_action"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:background="@drawable/btn_big_yellow"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.PAUSED)}"
            android:visibility='@{vm.trainingState == TrainingState.STARTED}'
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/pause_action"
                android:textColor="@color/black" />

            <TextView
                style="@style/BigButtonSubtitle"
                android:text='@{String.format("Loss: %.3f", vm.lastLoss)}'
                android:textColor="@color/black"
                android:visibility="@{vm.lastLoss != null}" />
        </LinearLayout>

        <LinearLayout
            style="@style/BigButton"
            android:background="@drawable/btn_big_green"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.setTrainingState(TrainingState.STARTED)}"
            android:visibility='@{vm.trainingState == TrainingState.PAUSED}'
            app:layout_constraintBottom_toTopOf="@+id/classes_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/BigButtonTitle"
                android:text="@string/resume_action"
                android:textColor="@color/black" />

            <TextView
                style="@style/BigButtonSubtitle"
                android:text='@{String.format("Loss: %.3f", vm.lastLoss)}'
                android:textColor="@color/black"
                android:visibility="@{vm.lastLoss != null}" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/classes_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="@+id/view_finder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/class_btn_1"
                style="@style/ClassButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:orientation="vertical"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "1"}'>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_triangle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:captureText='@{vm.numSamples["1"]}'
                    app:inferenceText='@{vm.confidence["1"]}' />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/class_btn_2"
                style="@style/ClassButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:orientation="vertical"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "2"}'>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:captureText='@{vm.numSamples["2"]}'
                    app:inferenceText='@{vm.confidence["2"]}' />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/class_btn_3"
                style="@style/ClassButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:orientation="vertical"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "3"}'>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_x" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:captureText='@{vm.numSamples["3"]}'
                    app:inferenceText='@{vm.confidence["3"]}' />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/class_btn_4"
                style="@style/ClassButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:clickable="@{vm.captureMode}"
                android:enabled="@{vm.captureMode}"
                android:orientation="vertical"
                app:highlight='@{!vm.captureMode &amp;&amp; vm.firstChoice == "4"}'>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_label_square" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="subtitle"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:captureMode='@{vm.captureMode}'
                    app:captureText='@{vm.numSamples["4"]}'
                    app:inferenceText='@{vm.confidence["4"]}' />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="483dp"
            android:text="Button"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="56dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
